# JaniBot

./: README.MD  README.md  robot.blend  robot.x3d  robot_2.79.blend  robot_2.79.json  robot_2.79.wbt  robot_old.blend
arm_export_description/: CMakeLists.txt  package.xml
arm_export_description/launch/: controller.yaml  display.launch  gazebo.launch
arm_export_description/meshes/: NEMA_24_1_1.stl  NEMA_24_2_1.stl  NEMA_24_3_1.stl  NEMA_34_v2_1.stl  RealSense_Camera_1.stl  base_link.stl  base_turnable_1.stl  gripper_base_1.stl  gripper_finger_1_1.stl  gripper_finger_2_1.stl  gripper_finger_3_1.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl  link_end_1.stl  stepper_joint_1.stl
arm_export_description/urdf/: arm_export.trans  arm_export.xacro  materials.xacro
base_export_description/: CMakeLists.txt
base_export_description/launch/: display.launch
base_export_description/meshes/: Double_Wheel__Thin__v11_v3__1__1.stl  Double_Wheel__Thin__v11_v3__3__1.stl  Nema34_1.stl  Nema34__1__1.stl  Nylon_platform_1.stl
basic_2dmap/: CMakeLists.txt  package.xml
basic_2dmap/src/: mapping.cpp
basic_vision/: README.md
blender_model/: robot_2.79.blend  robot_2.79.json
controllers/: robot_camera.c
depth_proc/: CMakeLists.txt  package.xml
filtered_cloud/: CMakeLists.txt  package.xml
filtered_cloud/src/: filter_down.cpp
jani_arm_control/: CMakeLists.txt  package.xml
jani_arm_control/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robot.srdf  ros_controllers.yaml
jani_arm_control/launch/: arm_control.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  my_gazebo.launch  my_move_group.launch  my_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  rviz_test.rviz  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
jani_arm_control/object_extraction_test_cases/test_case1/: cylinder_extracted.pcd  edges_removed.pcd  planes_removed.pcd  pre_processing.pcd  test_case1_scene_description.txt
jani_arm_control/object_extraction_test_cases/test_case_2/: cylinder_extracted0.pcd  cylinder_extracted1.pcd  edges_removed.pcd  planes_removed.pcd  pre_processing.pcd  test_case2_scene_description.txt
jani_arm_control/object_extraction_test_cases/test_case_3/: pre_processing.pcd  test_case3_scene_description.txt
jani_arm_control/object_extraction_test_cases/test_case_4/: cylinder_extracted0.pcd  edges_removed.pcd  planes_removed.pcd  pre_processing.pcd  test_case4_scene_description.txt
jani_arm_control/object_extraction_test_cases/test_case_5/: planes_removed.pcd  pre_processing.pcd  test_case5_scene_description.txt  trash_extracted0.pcd  trash_extracted1.pcd
jani_arm_control/src/: arm_control.cpp  arm_control2.cpp  dimension_extraction.h  main.cpp  object_extraction.h
jani_nav/: CMakeLists.txt  nav.rviz  package.xml
jani_world/: CMakeLists.txt  package.xml
jani_world/launch/: octomap_mapping.launch  sim_world_1.launch  washroom.launch
jani_world/models/Bathroom/: model.config  model.sdf
jani_world/models/Bathroom/meshes/: bathroom.dae
jani_world/models/bathroom_config_1/: model.config  model.sdf
jani_world/models/bathroom_config_1/meshes/: bathroom_config_1.dae
jani_world/models/bathroom_config_2/: model.config  model.sdf
jani_world/models/bathroom_config_2/meshes/: bathroom_config_2.dae
jani_world/models/bathroom_config_3/: model.config  model.sdf
jani_world/models/bathroom_config_3/meshes/: bathroom_config_3.dae
jani_world/models/bathroom_config_4/: model.config  model.sdf
jani_world/models/bathroom_config_4/meshes/: bathroom_config_4.dae
jani_world/models/bathroom_config_5/: model.config  model.sdf
jani_world/models/bathroom_config_5/meshes/: bathroom_config_5.dae
jani_world/models/bathroom_config_6/: model.config  model.sdf
jani_world/models/bathroom_config_6/meshes/: bathroom_config_6.dae
jani_world/models/waste_bin/: model.config  model.sdf
jani_world/models/waste_bin/meshes/: waste_bin.dae
jani_world/worlds/: config_1.1.world  config_1.world  config_2.world  config_3.world  config_4.world  config_5.world  config_6.world  sim_world_1.world
janibot/: CMakeLists.txt  door_detect.rviz  package.xml
janibot/src/: BaseDriverNode.cpp  DoorDetector.cpp
octomap_temp/: CMakeLists.txt  package.xml
odom_transform_publisher/: CMakeLists.txt  package.xml
odom_transform_publisher/src/: odom_transform_publisher_node.cpp
protos/: .arm.cache  .base.cache  arm.proto
robot_description/: CMakeLists.txt  changes_to_make_when_urdf_is_changed.txt  package.xml
robot_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  joints_limit.yaml  movement_test.launch  my_gazebo1.launch  test.launch  urdf.rviz  wall_follow.launch
robot_description/meshes/: DistanceSensor_back_1.dae  DistanceSensor_front_1.dae  DistanceSensor_left_1.dae  DistanceSensor_right_1.dae  NEMA_24_1_1.stl  NEMA_24_2_1.dae  NEMA_24_3_1.dae  NEMA_24_4_1.dae  NEMA_34_1.dae  RealSense_Camera_1.dae  camera_stuff_MODIFIED_camera_pitch_rotation_base_v1_1.stl  finger_1_1.stl  finger_2_1.stl  gripper_finger_1_1.stl  gripper_finger_2_1.dae  gripper_finger_3_1.dae  link_1_1.dae  link_2_1.dae  link_3_1.dae  modified_gripper_v3_1.stl  nylon_platform_1.dae  wheel_back_left_1.dae  wheel_back_left_1.stl  wheel_back_right_1.stl  wheel_front_left_1.dae  wheel_front_right_1.dae
robot_description/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  robot.gazebo  robot.gv  robot.trans  robot.urdf  robot.xacro
robot_gazebo/: package.xml
robot_joints_manager/: CMakeLists.txt  package.xml
webot_model/: .robot_2.79.wbproj  Robot.urdf  Robot.wbo  robot_2.79.wbt  robot_2.79_1.wbt
worlds/: .arm_test.wbproj  .obstacle.wbproj  .simulation.wbproj  arm_test.wbt  obstacle.wbt  simulation.wbt
(+155 files in other folders)
