<?xml version="1.0"?>
<package format="2">
  <name>jani_world</name>
  <version>0.0.0</version>
  <description>The jani_world package contains simulation world for janibot robot</description>
  
  <maintainer email="abhijithcheruvery@gmail.com">abhicv</maintainer>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>

</package>
