<?xml version="1.0"?>
<package format="2">
  <name>janibot</name>
  <version>0.0.0</version>
  <description>The janibot package</description>

  <maintainer email="abhicv@todo.todo">abhicv</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>

  <export> 
  </export>

</package>
